Welcome terminado y avanzado la pagina Create Account

--- a/Onymous 1.0/OnymousMobile/OnymousMobile/App.xaml
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile/App.xaml
@@ -10,6 +10,8 @@
             <infra:InstanceLocator x:Key="Locator"/>
             
             <!-- COLORS -->
+            <Color x:Key="ColorWhite">#FFF</Color>
+            <Color x:Key="ColorPrimary">#17301C</Color>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
