--- a/Onymous 1.0/OnymousMobile/OnymousMobile/Views/ProfilePage.xaml
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile/Views/ProfilePage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="OnymousMobile.Views.ProfilePage"
-             BindingContext="{Binding Main, Source={StaticResource Locator}}">
+             BindingContext="{Binding Main, Source={StaticResource Locator}}"
+             Title="Perfil"
+             Icon="ic_person_white">
     <ContentPage.Content>
         <ScrollView>
             <RelativeLayout
